--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "next": "latest",
+    "next-images": "^1.8.5",
     "react": "latest",
     "react-dom": "latest",
     "tailwindcss": "^2.2.19"
