--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "lucide-react": "^0.511.0",
     "next": "latest",
     "next-images": "^1.8.5",
     "react": "latest",
