--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.7",
     "axios": "^1.9.0",
     "lucide-react": "^0.511.0",
     "next": "latest",
     "next-images": "^1.8.5",
     "react": "latest",
-    "react-dom": "latest",
-    "tailwindcss": "^2.2.19"
+    "react-dom": "latest"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.21",
     "eslint": "^7.32.0",
-    "eslint-config-next": "^12.0.7"
+    "eslint-config-next": "^12.0.7",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.7"
   }
 }
