--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,14 @@
     "react-dom": "latest"
   },
   "devDependencies": {
+    "@types/node": "^22.15.19",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
     "autoprefixer": "^10.4.21",
     "eslint": "^7.32.0",
     "eslint-config-next": "^12.0.7",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "typescript": "^5.8.3"
   }
 }
