--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.7",
+    "@types/mongodb": "^4.0.6",
     "axios": "^1.9.0",
     "lucide-react": "^0.511.0",
+    "mongodb": "^6.16.0",
     "next": "latest",
     "next-images": "^1.8.5",
     "react": "latest",
