--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,7 @@ click==8.2.0
 cytoolz==1.0.1
 dnspython==2.7.0
 ecdsa==0.19.1
+email_validator==2.2.0
 eth-account==0.13.7
 eth-hash==0.7.1
 eth-keyfile==0.8.1
@@ -23,15 +24,22 @@ eth-typing==5.2.1
 eth-utils==5.3.0
 eth_abi==5.2.0
 fastapi==0.115.12
-Flask==3.1.1
+fastapi-cli==0.0.7
 flask-cors==6.0.0
 frozenlist==1.6.0
+h11==0.16.0
 hexbytes==1.3.1
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+mdurl==0.1.2
 mongoengine==0.29.1
+motor==3.7.1
 multidict==6.4.4
 parsimonious==0.10.0
 passlib==1.7.4
@@ -40,15 +48,20 @@ pyasn1==0.4.8
 pycryptodome==3.23.0
 pydantic==2.11.4
 pydantic_core==2.33.2
+Pygments==2.19.1
 pymongo==4.13.0
 python-dotenv==1.1.0
 python-jose==3.4.0
 python-multipart==0.0.20
 pyunormalize==16.0.0
+PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
+rich==14.0.0
+rich-toolkit==0.14.6
 rlp==4.1.0
 rsa==4.9.1
+shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 starlette==0.46.2
@@ -57,6 +70,9 @@ types-requests==2.32.0.20250515
 typing-inspection==0.4.0
 typing_extensions==4.13.2
 urllib3==2.4.0
+uvicorn==0.34.2
+uvloop==0.21.0
+watchfiles==1.0.5
 web3==7.11.1
 websockets==15.0.1
 Werkzeug==3.1.3
